# heuristic-metatrader5-bridge

./: .gitignore  AUDIT_COMMIT_551D929.md  CHANGELOG.md  README.es.md  README.md  TRADERS_GUIDE.es.md  pyproject.toml
apps/: control_plane.py  core_runtime.py  dev_stack.py  fast_desk_runtime.py  smc_desk_runtime.py
apps/webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
configs/: base.env.example
docs/: ARCHITECTURE.md  CORRELATION_DESK_WIRING.md  CORRELATION_ENGINE_DESIGN.md  FAST_SMC_TICKET_ISOLATION.md  WEBUI_ARCHITECTURE.md  symbol_catalog_FBS-Demo.md
docs/audit/: 2026-03-23_correction_execution_report.md  2026-03-23_full_audit.md  2026-03-24_connector_certification_execution_report.md  2026-03-24_live_bridge_audit.md  2026-03-24_mt5_official_surface_inventory.md  2026-03-25_deuda_webui_settings_put_endpoints.md  2026-03-25_testing_instructions.md  2026-03-25_webui_r1r4_audit.md  2026-03-25_webui_r1r4_final_summary.md  2026-03-26_deuda_fast_desk_no_opera.md  2026-03-26_deuda_tecnica_diagnostico_completo.md  2026-03-26_deuda_tecnica_fast_desk_zero_signals.md  2026-03-26_indicator_bridge_request_flow_implementation.md  2026-03-26_universal_lot_size_formula_implementation.md  2026-03-27_fast_desk_action_plan_and_repair_prompt.md  2026-03-27_fast_desk_analyst_heuristic_deep_audit.md  (+8 more)
mql5/: LLMBrokerSessionsService.ex5  LLMBrokerSessionsService.mq5  LLMIndicatorServiceEA.ex5  LLMIndicatorServiceEA.mq5
scripts/: db_diag.py  fast_desk_diag.py  fast_desk_diagnostic.py  integration_probe.py  live_monitor.py  purge_runtime_db.py
(+288 files in other folders)
